--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,20 @@
-/* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@import "../node_modules/animate.css/animate.min.css";
+
+@tailwind base;
+
+@layer base {
+  html {
+    @apply text-surface bg-white;
+  }
+  html.dark {
+    @apply text-neutral-50 bg-body-dark;
+  }
+}
+
+@tailwind components;
+@tailwind utilities;
+
+p {
+  @apply leading-[1.6];
+}
