Alterando os icons svg

--- a/src/app/components/sessao-curiosidades/sessao-curiosidades.component.html
+++ b/src/app/components/sessao-curiosidades/sessao-curiosidades.component.html
@@ -9,7 +9,7 @@
         'bg-white transform scale-x-[-1]': i % 2 !== 0
       }"
         class="bg-teal-600/20 rounded-lg w-16 h-16 flex items-center justify-center transform transition duration-300 hover:scale-110">
-        <img class=" m-3" [src]="curiosidade.imagem" alt="">
+        <img class="m-3 p-2" [src]="curiosidade.imagem" alt="">
       </div>
       <div>
         <h3 [ngClass]="{
@@ -37,7 +37,7 @@
           <div class="flex flex-row items-center">
             <div
               class="bg-teal-600/20 rounded-lg w-16 h-16 flex items-center justify-center transform transition duration-300 hover:scale-110">
-              <img class="m-3" [src]="curiosidade.imagem" alt="">
+              <img class="m-3 p-2" [src]="curiosidade.imagem" alt="">
             </div>
             <h3 class="text-teal-950 font-semibold text-2xl ml-5"> {{ curiosidade.titulo }} </h3>
           </div>
@@ -58,7 +58,7 @@
           <div class="flex flex-row items-center">
             <div
               class="bg-teal-600/20 rounded-lg w-16 h-16 flex items-center justify-center transform transition duration-300 hover:scale-110">
-              <img class="m-3" [src]="curiosidade.imagem" alt="">
+              <img class="m-3 p-2" [src]="curiosidade.imagem" alt="">
             </div>
             <h3 class="text-teal-950 font-semibold text-2xl ml-5"> {{ curiosidade.titulo }} </h3>
           </div>
