Inserindo links redes sociais

--- a/src/app/components/sessao-curiosidades/sessao-curiosidades.component.html
+++ b/src/app/components/sessao-curiosidades/sessao-curiosidades.component.html
@@ -70,7 +70,7 @@
         </div>
       </div>
     </div>
-    <img class="absolute bottom-0 left-1/2 transform -translate-x-1/2 h-full" src="assets/images/Foto_Pedro2.png"
+    <img class="absolute bottom-0 left-[580px] transform -translate-x-1/2 h-full" src="assets/images/Foto_Pedro2.png"
       alt="">
   </div>
 
