--- a/src/app/components/sessao-principal/sessao-principal.component.html
+++ b/src/app/components/sessao-principal/sessao-principal.component.html
@@ -16,7 +16,7 @@
           <h4 class="mb-6 text-xl lg:text-3xl font-semibold">
             Apoio psicológico acessível <br> e de qualidade.
           </h4>
-          <a class="mb-1 inline-block rounded border-2 border-teal-600 bg-teal-600 px-6 pb-[6px] pt-2 text-xs font-medium uppercase leading-normal text-neutral-50 transition duration-150 ease-in-out hover:border-neutral-300 hover:text-neutral-200 focus:border-neutral-300 focus:text-neutral-200 focus:outline-none focus:ring-0 active:border-neutral-300 active:text-neutral-200 dark:hover:bg-neutral-600 dark:focus:bg-neutral-600"
+          <a class="mb-1 inline-block rounded border-2 border-teal-600 bg-teal-600 px-7 pb-[6px] pt-2 text-xs lg:text-2xl font-medium uppercase leading-normal text-neutral-50 transition duration-150 ease-in-out hover:border-neutral-300 hover:text-neutral-200 focus:border-neutral-300 focus:text-neutral-200 focus:outline-none focus:ring-0 active:border-neutral-300 active:text-neutral-200 dark:hover:bg-neutral-600 dark:focus:bg-neutral-600"
             href="https://wa.me/5562996384141" target="_blank" rel="noopener noreferrer" role="button"
             data-twe-ripple-init data-twe-ripple-color="light">Marque um horário</a>
         </div>
