Fixando a barra nav no topo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,6 @@
 <app-sessao-curiosidades></app-sessao-curiosidades>
 <app-sessao-apoio-emocional></app-sessao-apoio-emocional>
 <app-sessao-horario-funcionamento></app-sessao-horario-funcionamento>
-<app-sessao-sobre></app-sessao-sobre>
-<app-sessao-sobre-lg></app-sessao-sobre-lg>
+<app-sessao-sobre id="quem-sou-mobile"></app-sessao-sobre>
+<app-sessao-sobre-lg id="quem-sou-lg"></app-sessao-sobre-lg>
 <app-footer></app-footer>
