--- a/src/app/components/sessao-sobre-lg/sessao-sobre-lg.component.html
+++ b/src/app/components/sessao-sobre-lg/sessao-sobre-lg.component.html
@@ -1,4 +1,4 @@
-<section class="bg-teal-950 xs:hidden lg:block mt-14">
+<section class="bg-teal-950 xs:hidden lg:block mt-14" id="quem-sou-lg">
   <div class="flex flex-row text-white w-8/12 h-96 m-auto ">
     <div class="w-3/4 content-center">
       <div>
