--- a/src/app/components/sessao-sobre/sessao-sobre.component.html
+++ b/src/app/components/sessao-sobre/sessao-sobre.component.html
@@ -1,4 +1,4 @@
-<section class="lg:hidden">
+<section class="lg:hidden" id="quem-sou-mobile">
   <div class="bg-white relative flex items-end md:items-center md:justify-end">
     <div class="absolute bottom-0 w-full bg-teal-950" style="height: 80%;"></div>
     <div class="relative text-white flex-col content-center mr-28 hidden md:flex">
