--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
 <app-terapeuta-especialista></app-terapeuta-especialista>
 <app-sessao-servicos></app-sessao-servicos>
 <app-sessao-curiosidades></app-sessao-curiosidades>
+<app-sessao-artigos-ultimas-postagens></app-sessao-artigos-ultimas-postagens>
 <app-sessao-apoio-emocional></app-sessao-apoio-emocional>
 <app-sessao-horario-funcionamento></app-sessao-horario-funcionamento>
 <app-sessao-sobre id="quem-sou-mobile"></app-sessao-sobre>
