Alterando titulo componente artigos ultimas postagens

--- a/src/app/components/sessao-artigos-ultimas-postagens/sessao-artigos-ultimas-postagens.component.html
+++ b/src/app/components/sessao-artigos-ultimas-postagens/sessao-artigos-ultimas-postagens.component.html
@@ -1,7 +1,7 @@
 <section class="md:p-20 lg:w-8/12 lg:m-auto lg:p-0 h-full">
 
   <h2 class="mb-4 text-4xl font-semibold text-teal-950 animate__animated animate__fadeIn">
-    Artigos:<span class="text-teal-600"> Últimas postagens.</span>
+    Artigos:<span class="text-teal-600"> Últimas publicações.</span>
   </h2>
   <div class="grid-cols-1 sm:grid md:grid-cols-3 mb-28">
     <div *ngFor="let artigos of artigosUltimosPosts; let i = index "
