Correcao margens mobile

--- a/src/app/components/sessao-apoio-emocional/sessao-apoio-emocional.component.html
+++ b/src/app/components/sessao-apoio-emocional/sessao-apoio-emocional.component.html
@@ -1,4 +1,4 @@
-<section class="relative p-4 md:p-20 bg-teal-950/75">
+<section class="relative md:p-20 bg-teal-950/75">
   <div
     class="absolute inset-0 bg-[url('assets/images/help-3049553_1280.jpg')] bg-auto bg-no-repeat bg-center opacity-20">
   </div>
