--- a/src/app/components/sessao-artigos-ultimas-postagens/sessao-artigos-ultimas-postagens.component.html
+++ b/src/app/components/sessao-artigos-ultimas-postagens/sessao-artigos-ultimas-postagens.component.html
@@ -1,6 +1,6 @@
 <section class="md:p-20 lg:w-8/12 lg:m-auto lg:p-0 h-full">
 
-  <h2 class="mb-4 text-4xl font-semibold text-teal-950 animate__animated animate__fadeIn">
+  <h2 class="m-4 mb-4 text-4xl font-semibold text-teal-950 animate__animated animate__fadeIn">
     Artigos:<span class="text-teal-600"> Últimas publicações.</span>
   </h2>
   <div class="grid-cols-1 sm:grid md:grid-cols-3 mb-28">
