--- a/src/app/components/sessao-servicos/sessao-servicos.component.html
+++ b/src/app/components/sessao-servicos/sessao-servicos.component.html
@@ -1,5 +1,5 @@
 <section class="md:p-20 lg:w-8/12 lg:m-auto">
-  <h2 class="mb-4 text-4xl font-semibold text-teal-950 animate__animated animate__fadeIn">
+  <h2 class="m-4 mb-4 text-4xl font-semibold text-teal-950 animate__animated animate__fadeIn">
     Estou aqui para oferecer o melhor<span class="text-teal-600"> apoio em cada situação.</span>
   </h2>
   <div class="m-4 space-y-4 justify-items-center">
