Criacao do componente home

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,3 @@
 <app-header></app-header>
-<app-sessao-principal></app-sessao-principal>
-<app-terapeuta-especialista></app-terapeuta-especialista>
-<app-sessao-servicos></app-sessao-servicos>
-<app-sessao-curiosidades></app-sessao-curiosidades>
-<app-sessao-artigos-ultimas-postagens></app-sessao-artigos-ultimas-postagens>
-<app-sessao-apoio-emocional></app-sessao-apoio-emocional>
-<app-sessao-horario-funcionamento></app-sessao-horario-funcionamento>
-<app-sessao-sobre id="quem-sou-mobile"></app-sessao-sobre>
-<app-sessao-sobre-lg id="quem-sou-lg"></app-sessao-sobre-lg>
+<router-outlet></router-outlet>
 <app-footer></app-footer>
