--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -63,7 +63,7 @@
           </li>
           <li class="mb-4 lg:mb-0 lg:pe-2" data-twe-nav-item-ref>
             <a class="text-neutral-900 transition duration-200 hover:text-emerald-500 hover:ease-in-out focus:text-emerald-500 active:text-emerald-500 motion-reduce:transition-none lg:px-2"
-              href="#" data-twe-nav-link-ref>Artigos</a>
+              routerLink="/artigos" data-twe-nav-link-ref>Artigos</a>
           </li>
         </ul>
 
