Criacao componente artigos

--- a/src/styles.css
+++ b/src/styles.css
@@ -10,6 +10,9 @@
   html.dark {
     @apply text-neutral-50 bg-body-dark;
   }
+  .paragrafo {
+    margin-left: 20px;
+  }
 }
 
 @tailwind components;
