Adicionando as rotas nos servicos

--- a/src/app/components/sessao-todos-artigos/sessao-todos-artigos.component.html
+++ b/src/app/components/sessao-todos-artigos/sessao-todos-artigos.component.html
@@ -26,7 +26,8 @@
       </div>
       <div class="p-6">
         <a type="button" href="#"
-          class="pointer-events-auto me-5 inline-block cursor-pointer rounded text-base font-normal leading-normal text-teal-600 transition duration-150 ease-in-out hover:text-teal-950 focus:text-teal-600 focus:outline-none focus:ring-0 active:text-teal-600">
+          class="pointer-events-auto me-5 inline-block cursor-pointer rounded text-base font-normal leading-normal text-teal-600 transition duration-150 ease-in-out hover:text-teal-950 focus:text-teal-600 focus:outline-none focus:ring-0 active:text-teal-600"
+          [routerLink]="['/artigos', artigos.id]">
           Ler Artigo
         </a>
       </div>
