--- a/src/app/components/artigo/artigo.component.html
+++ b/src/app/components/artigo/artigo.component.html
@@ -36,10 +36,15 @@
         <svg width="30" height="3" xmlns="http://www.w3.org/2000/svg" class="mr-5">
           <rect width="100%" height="100%" fill="#0d9488" />
         </svg>
+
         <h5 class="mb-2 text-3xl font-medium leading-tight">
           {{ artigo.subTitle }}
         </h5>
       </div>
+      <p class="font-medium text-teal-600 mt-4 mb-4">
+        Por {{ artigo.autor }} em {{ artigo.dataCriacao }}, <br>atualizado em {{
+        artigo.dataAtualizacao }}
+      </p>
       <div class="mb-4 mt-4 text-base text-justify" [innerHTML]="artigo.content"></div>
       <p class="text-base text-surface/75 dark:text-neutral-300">
         <small>Last updated 3 mins ago</small>
