Ajustando o formato das datas

--- a/src/app/components/sessao-todos-artigos/sessao-todos-artigos.component.html
+++ b/src/app/components/sessao-todos-artigos/sessao-todos-artigos.component.html
@@ -33,7 +33,7 @@
       </div>
       <div
         class="mt-auto border-t-2 border-neutral-100 px-6 py-3 text-center text-surface/75 dark:border-white/10 dark:text-neutral-300">
-        <small> {{ formatDate(artigos.dataPostagem) }} </small>
+        <small> {{ artigos.dataPostagem }} </small>
       </div>
     </div>
 
