Correção alinhamento foto componente curiosidades.

--- a/src/app/components/sessao-curiosidades/sessao-curiosidades.component.html
+++ b/src/app/components/sessao-curiosidades/sessao-curiosidades.component.html
@@ -51,7 +51,7 @@
     </div>
 
     <!-- Coluna Direita -->
-    <div class="flex flex-col">
+    <div class="flex flex-col relative">
       <div *ngFor="let curiosidade of curiosidadesRight; let i = index"
         class="bg-teal-600/20 p-4 pl-36 flex flex-col justify-between min-h-[200px]">
         <div>
@@ -70,8 +70,9 @@
         </div>
       </div>
     </div>
-    <img class="absolute bottom-0 left-[580px] transform -translate-x-1/2 h-full" src="assets/images/Foto_Pedro2.png"
-      alt="">
+    <img
+      class="absolute bottom-0 left-[400px]  2xl:left-[600px] transform -translate-x-1/2 w-full max-w-xl lg:w-1/2 xl:w-72 h-auto"
+      src="assets/images/Foto_Pedro2.png" alt="">
   </div>
 
 
