Correção prefixo do telefone

--- a/src/app/components/artigo/artigo.component.html
+++ b/src/app/components/artigo/artigo.component.html
@@ -45,10 +45,13 @@
         Por {{ artigo.autor }} em {{ artigo.dataCriacao }}, <br>atualizado em {{
         artigo.dataAtualizacao }}
       </p>
-      <div class="mb-4 mt-4 text-base text-justify" [innerHTML]="artigo.content"></div>
+      <div class="mb-4 mt-4 text-base text-left" [innerHTML]="artigo.content"></div>
       <p class="text-base text-surface/75 dark:text-neutral-300">
-        <small>Last updated 3 mins ago</small>
+        <small>Pedro Soares Psicoterapeuta</small>
       </p>
+      <a class="mb-1 mt-3 inline-block rounded border-2 border-teal-600 bg-teal-600 px-6 pb-[6px] pt-2 text-xs font-medium uppercase leading-normal text-neutral-50 transition duration-150 ease-in-out hover:border-neutral-300 hover:text-neutral-200 focus:border-neutral-300 focus:text-neutral-200 focus:outline-none focus:ring-0 active:border-neutral-300 active:text-neutral-200 dark:hover:bg-neutral-600 dark:focus:bg-neutral-600"
+        href="https://wa.me/5562996384141" target="_blank" role="button" data-twe-ripple-init
+        data-twe-ripple-color="light">Marque uma consulta</a>
     </div>
   </div>
 </section>
