--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,11 +1,11 @@
 <section class="relative lg:fixed z-50 w-full bg-white shadow-md">
   <div class=" bg-teal-950 text-white flex justify-center items-center">
-    <div class="flex-row items-center p-2 hidden lg:flex mr-36">
-      <img class=" m-3" src="assets/svg/icon-phone.svg.svg" alt="">
+    <div class="flex-row items-center p-2 hidden lg:flex mr-36 animate__animated animate__backInLeft">
+      <img class="m-3" src="assets/svg/icon-phone.svg.svg" alt="">
       <p>62 99638-4141</p>
     </div>
-    <div class="flex flex-row items-center p-2">
-      <img class=" m-3" src="assets/svg/icon-mail.svg.svg" alt="">
+    <div class="flex flex-row items-center p-2 animate__animated animate__backInRight">
+      <img class="m-3" src="assets/svg/icon-mail.svg.svg" alt="">
       <p>psicuidarclinica&#64;gmail.com</p>
     </div>
   </div>
@@ -56,11 +56,6 @@
               class="text-neutral-900 transition duration-200 hover:text-emerald-500 hover:ease-in-out focus:text-emerald-500 active:text-emerald-500 motion-reduce:transition-none lg:px-2"
               href="#" (click)="scrollToSection('quem-sou')">Quem sou</a> </li>
 
-
-          <li class="mb-4 lg:mb-0 lg:pe-2" data-twe-nav-item-ref>
-            <a class="text-neutral-900 transition duration-200 hover:text-emerald-500 hover:ease-in-out focus:text-emerald-500 active:text-emerald-500 motion-reduce:transition-none lg:px-2"
-              href="#" data-twe-nav-link-ref>Psicoterapia</a>
-          </li>
           <li class="mb-4 lg:mb-0 lg:pe-2" data-twe-nav-item-ref>
             <a class="text-neutral-900 transition duration-200 hover:text-emerald-500 hover:ease-in-out focus:text-emerald-500 active:text-emerald-500 motion-reduce:transition-none lg:px-2"
               routerLink="/artigos" data-twe-nav-link-ref>Artigos</a>
