Ajuste padding apoio emocional

--- a/src/app/components/sessao-apoio-emocional/sessao-apoio-emocional.component.html
+++ b/src/app/components/sessao-apoio-emocional/sessao-apoio-emocional.component.html
@@ -2,8 +2,8 @@
   <div
     class="absolute inset-0 bg-[url('assets/images/help-3049553_1280.jpg')] bg-auto bg-no-repeat bg-center opacity-20">
   </div>
-  <div class="relative z-10 m-4 space-y-4 lg:w-8/12 lg:m-auto">
-    <h2 class="mb-4 text-4xl font-semibold text-white text-start text-shadow-2xl lg:text-6xl">
+  <div class="relative z-10 m-4 space-y-4 lg:w-8/12 lg:m-auto xs:py-3">
+    <h2 class="mb-4 text-4xl font-semibold text-white text-start text-shadow-2xl lg:text-6xl xs:mt-5">
       Em que momento você precisa de apoio emocional?
     </h2>
     <div class="flex flex-row">
