Criação dos componentes Luto e Saúde Mental

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,13 +1,17 @@
 <section class="relative lg:fixed z-50 w-full bg-white shadow-md">
   <div class=" bg-teal-950 text-white flex justify-center items-center">
-    <div class="flex-row items-center p-2 hidden lg:flex mr-36 animate__animated animate__backInLeft">
-      <img class="m-3" src="assets/svg/icon-phone.svg.svg" alt="">
-      <p>62 99638-4141</p>
-    </div>
-    <div class="flex flex-row items-center p-2 animate__animated animate__backInRight">
-      <img class="m-3" src="assets/svg/icon-mail.svg.svg" alt="">
-      <p>psicuidarclinica&#64;gmail.com</p>
-    </div>
+    <a href="tel:+5562996384141">
+      <div class="flex-row items-center p-2 hidden lg:flex mr-36 animate__animated animate__backInLeft">
+        <img class="m-3" src="assets/svg/icon-phone.svg.svg" alt="">
+        <p>62 99638-4141</p>
+      </div>
+    </a>
+    <a href="mailto:psicuidarclinica@;gmail.com">
+      <div class="flex flex-row items-center p-2 animate__animated animate__backInRight">
+        <img class="m-3" src="assets/svg/icon-mail.svg.svg" alt="">
+        <p>psicuidarclinica&#64;gmail.com</p>
+      </div>
+    </a>
   </div>
   <!-- Main navigation container -->
   <nav
