--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,3 +1,5 @@
-<footer class="bg-teal-950 p-6 border-t-2 border-white text-center text-white">
-  <p>Todos os direitos reservados © 2024 | Desenvolvido por Antony Diego</p>
+<footer class="bg-teal-950 p-6 border-t-2 border-white text-center text-white sm:text-sm">
+  <p>Todos os direitos reservados © 2024 | Desenvolvido por <a href="https://wa.me/5561992678046" target="_blank"><span
+        class="text-emerald-300">Antony
+        Diego</span></a></p>
 </footer>
