Correção container foto sobre

--- a/src/app/components/sessao-sobre/sessao-sobre.component.html
+++ b/src/app/components/sessao-sobre/sessao-sobre.component.html
@@ -1,8 +1,8 @@
-<section class="lg:hidden" id="quem-sou-mobile">
+<section class="md:hidden" id="quem-sou-mobile">
   <div class="bg-white relative flex items-end md:items-center md:justify-end">
     <div class="absolute bottom-0 w-full bg-teal-950" style="height: 80%;"></div>
     <div class="relative text-white flex-col content-center mr-28 hidden md:flex">
-      <h4 class="font-light md:text-3xl">Psicólogo Clínico e <br> Psicoterapeuta</h4>
+      <h4 class="font-light md:text-3xl">Psicólogo Clínico e <br> Psicoterapeuta 2</h4>
       <h4 class="font-medium md:text-2xl">Pedro Soares <br><span class="font-normal md:text-xl">CRP/09: 010072</span>
       </h4>
     </div>
